# spot_isaac_adapter

./: .gitmodules  README.md  package.xml
config/: spot.yaml
isaac_controller/: spot_isaac_controller.py
spot_isaac_adapter/: boston_dynamics2ros.py  ros2isaac_policy.py
spot_simulation_app/: spot_simulation_app.py
