<?xml version="1.0"?>
<package format="3">
  <name>spot_isaac_adapter</name>
  <version>0.1.0</version>
  <description>Adapter to interface Boston Dynamics Spot with Isaac Sim using ROS 2</description>
  <maintainer email="rauniyar@cmu.edu">Adi</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Optional: if using Isaac or BD SDKs -->
  <exec_depend>boston_dynamics_api</exec_depend>
  <exec_depend>isaac_ros_common</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
